--- a/app/styles.css
+++ b/app/styles.css
@@ -90,3 +90,26 @@ input {
 .markdown-bloc > * {
   list-style: none;
 }
+footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color:#ce0033;
+  padding: 1rem;
+  height: 10vh;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  color:white;
+}
+.first-row {
+  display: flex;
+  align-items: center;
+  color:white;
+  background-color: yellowgreen;
+}
+.liens{
+  color:white;
+}
