--- a/app/styles.css
+++ b/app/styles.css
@@ -106,3 +106,8 @@ h4 {
   margin-bottom: 5rem;
   border: none !important;
 }
+.ant-image-img {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+}
